# privacy-preserving-image-features

./: .gitignore  .gitmodules  README.md  download_hpatches_sequences.sh  env.yml  evaluate_hpatches_sequences.py  ppif_utils.py
databases/: hardnet.npy  sift.npy
feature-utils/: checkpoint_liberty_with_aug.pth  extract_hardnet.py  extract_sift.py
py_ppif/: CMakeLists.txt  main.cc  setup.py
py_ppif/lib/: lifting.cc  point_to_subspace_matching.cc  subspace_to_subspace_matching.cc  types.h
py_ppif_cuda/: CMakeLists.txt  main.cc  setup.py
py_ppif_cuda/lib/: basic_types.h  matching.cu  matching.h  matrix_utils.cu  point_to_subspace_matching.cc  subspace_to_subspace_matching.cc  types.h
